--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-codekit",
   "description": "Grunt plugin that compiles Kit files",
-  "version": "0.4.1",
+  "version": "0.2.1",
   "homepage": "https://github.com/fatso83/grunt-codekit",
   "author": {
     "name": "Carl-Erik Kopseng",
@@ -28,35 +28,18 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "node-kit": "~0.6",
-    "file-builder": "^0.1.0",
-    "async": "^0.9.0"
+        "node-kit" : "~0.2"
   },
   "devDependencies": {
-    "chai": "^1.9.1",
-    "grunt": "~0.4.2",
-    "grunt-contrib-clean": "~0.4.0",
     "grunt-contrib-jshint": "~0.6.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-mocha-test": "^0.11.0",
-    "load-grunt-tasks": "^0.4.0",
-    "fs-extra": "^0.10.0",
-    "sinon": "^1.10.3"
+    "grunt-contrib-clean": "~0.4.0",
+    "grunt-contrib-nodeunit": "~0.2.0",
+    "grunt": "~0.4.2"
   },
   "peerDependencies": {
     "grunt": "~0.4.2"
   },
   "keywords": [
-    "grunt",
-    "plugin",
-    "codekit",
-    "prepros",
-    "concatenate",
-    "topological sort",
-    "append",
-    "prepend",
-    "Kit language",
-    "@codekit-append",
-    "@codekit-prepend"
+    "gruntplugin"
   ]
 }
